--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "task-manager",
+  "name": "taskmanager",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,31 +10,30 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@headlessui/react": "^2.0.4",
-    "@reduxjs/toolkit": "^2.2.5",
-    "clsx": "^2.1.1",
+    "@headlessui/react": "^1.7.18",
+    "@reduxjs/toolkit": "^2.1.0",
+    "clsx": "^2.1.0",
     "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-hook-form": "^7.52.0",
-    "react-icons": "^5.2.1",
-    "react-redux": "^9.1.2",
-    "react-router-dom": "^6.24.0",
-    "recharts": "^2.12.7",
-    "sonner": "^1.5.0"
+    "react-hook-form": "^7.50.1",
+    "react-icons": "^5.0.1",
+    "react-redux": "^9.1.0",
+    "react-router-dom": "^6.22.0",
+    "recharts": "^2.12.0",
+    "sonner": "^1.4.0"
   },
   "devDependencies": {
-    "@types/react": "^18.2.66",
-    "@types/react-dom": "^18.2.22",
+    "@types/react": "^18.2.55",
+    "@types/react-dom": "^18.2.19",
     "@vitejs/plugin-react": "^4.2.1",
-    "autoprefixer": "^10.4.19",
-    "eslint": "^8.57.0",
-    "eslint-plugin-react": "^7.34.1",
+    "autoprefixer": "^10.4.17",
+    "eslint": "^8.56.0",
+    "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.6",
-    "nodemon": "^3.1.3",
-    "postcss": "^8.4.38",
-    "tailwindcss": "^3.4.4",
-    "vite": "^5.2.0"
+    "eslint-plugin-react-refresh": "^0.4.5",
+    "postcss": "^8.4.35",
+    "tailwindcss": "^3.4.1",
+    "vite": "^5.1.0"
   }
 }
